--- a/styles/reset.css
+++ b/styles/reset.css
@@ -111,7 +111,7 @@ sup {
   top: -.5em;
 }
 
-a {
+/* a {
   color: #007bff;
   text-decoration: none;
   background-color: transparent; 
@@ -132,7 +132,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 a:not([href]):not([tabindex]):focus {
   outline: 0;
-}
+} */
 
 pre,
 code,
